Fix black icons on Firefox
Closes #17

--- a/public/css/summoner.css
+++ b/public/css/summoner.css
@@ -67,7 +67,8 @@ th[data-sorting-order="1"]>span {
 
 .notEarned {
 	filter: brightness(0%) opacity(15%);
-	-webkit-filter: brightness(0%) opacity(15%);
+	/* https://github.com/Derpthemeus/ChampionMasteryLookup/issues/17 */
+	-webkit-filter: brightness(1%) opacity(15%);
 }
 
 .progressBar-outer {
